Criação de um Componente Parte 2

--- a/02 - COMPONENTES E ESTILIZAÇÕES/components-app/src/app/app.component.html
+++ b/02 - COMPONENTES E ESTILIZAÇÕES/components-app/src/app/app.component.html
@@ -1,3 +1,4 @@
-<h1>COMPONENTES E ESTILIZAÇÕES</h1>
-<h2>app componennte</h2>
-<app-card/>
+<div class="cards-container">
+    <app-card />
+    <app-card-roxo />
+</div>
