--- a/02 - COMPONENTES E ESTILIZAÇÕES/components-app/src/app/card/card.component.html
+++ b/02 - COMPONENTES E ESTILIZAÇÕES/components-app/src/app/card/card.component.html
@@ -1,1 +1,5 @@
-<h1>Primeiro COMPONENTE card</h1>
+<div class="card">
+    <div class="card__plan card__item">Plano <b>Simples</b></div>
+    <div class="card__price card__item">100,00</div>
+    <div class="card__button card__item">100,00</div>
+</div>
