--- a/02 - COMPONENTES E ESTILIZAÇÕES/components-app/src/app/card/card.component.html
+++ b/02 - COMPONENTES E ESTILIZAÇÕES/components-app/src/app/card/card.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <div class="card__plan card__item">Plano <b>{{plano.infos.tipo}}</b></div>
-    <div class="card__price card__item">{{getFullPrice()}}</div>
+    <div class="card__plan card__item">Plano <b>{{plano.infos?.tipo}}</b></div>
+    <div class="card__price card__item">{{plano.infos?.preco}}</div>
     <app-card-button/>
 </div>
