Utilização do Seletor ":host”

--- a/02 - COMPONENTES E ESTILIZAÇÕES/components-app/src/app/card/card.component.scss
+++ b/02 - COMPONENTES E ESTILIZAÇÕES/components-app/src/app/card/card.component.scss
@@ -31,6 +31,6 @@
     }
 }
 
-::ng-deep .card-button-cancel{
-    background-color: #fd7557 !important;
+:host ::ng-deep .card-button-cancel{
+    background-color: yellow !important;
 }
