--- a/02 - COMPONENTES E ESTILIZAÇÕES/components-app/src/app/card-roxo/card-roxo.component.html
+++ b/02 - COMPONENTES E ESTILIZAÇÕES/components-app/src/app/card-roxo/card-roxo.component.html
@@ -2,5 +2,6 @@
     <div class="card-roxo__plan card-roxo__item">Plano <b>Completo</b></div>
     <div class="card-roxo__price card-roxo__item">R$250,00/Mês</div>
     <app-card-rox-button/>
+    <app-card-button-cancel/>
 </div>
 
