--- a/02 - COMPONENTES E ESTILIZAÇÕES/components-app/src/app/card/card.component.html
+++ b/02 - COMPONENTES E ESTILIZAÇÕES/components-app/src/app/card/card.component.html
@@ -1,6 +1,9 @@
 <div class="card">
     <div class="card__plan card__item">Plano <b>{{plano.infos.tipo}}</b></div>
     <div class="card__price card__item">{{plano.infos.preco}}</div>
-    <app-card-button/>
-    <app-card-button-cancel/>
+    <app-card-button />
+    <app-card-button-cancel />
+    <mat-slider min="1" max="5" step="0.5">
+        <input matSliderThumb value="1.5">
+    </mat-slider>
 </div>
