--- a/02 - COMPONENTES E ESTILIZAÇÕES/components-app/src/app/styles/_global-overrides.scss
+++ b/02 - COMPONENTES E ESTILIZAÇÕES/components-app/src/app/styles/_global-overrides.scss
@@ -1,3 +1,7 @@
 .card-button-cancel{
     background-color: yellow !important;
 }
+
+.mdc-slider__track--active_fill{
+    border-color: green !important;
+}
