O que é "Event Binding”

--- a/03 - BINDING, DIRETIVAS, TEMPLATES E DECORATORS/bnding-app/src/app/app.component.html
+++ b/03 - BINDING, DIRETIVAS, TEMPLATES E DECORATORS/bnding-app/src/app/app.component.html
@@ -1,4 +1,13 @@
-<input type="text" [value]="inputTexto" [disabled]="isDisabled">
+<!-- [] = enviando valor para propriedade
+     () = recebendo valor da propriedade -->
+
+<input 
+type="text" 
+[value]="inputTexto" 
+[disabled]="isDisabled" 
+(keyup)="handleInputKeyup($event)"
+(input)="handleInputEvent($event)"
+>
 
 <br>
 
