O que é "Attribute Binding”

--- a/03 - BINDING, DIRETIVAS, TEMPLATES E DECORATORS/bnding-app/src/app/app.component.html
+++ b/03 - BINDING, DIRETIVAS, TEMPLATES E DECORATORS/bnding-app/src/app/app.component.html
@@ -17,3 +17,7 @@ type="text"
 <br>
 
 <button (click)="showLogInput()">Log</button>
+
+<br>
+
+<button [attr.title]="buttonTitle" >ATRIBURO BINDING</button>
