--- a/03 - BINDING, DIRETIVAS, TEMPLATES E DECORATORS/bnding-app/src/app/app.component.html
+++ b/03 - BINDING, DIRETIVAS, TEMPLATES E DECORATORS/bnding-app/src/app/app.component.html
@@ -1,23 +1,7 @@
-<button style="width: 100px; background-color: aqua;">Botão 0</button>
-<br>
-<button [style.width]="widthButton1" [style.backgroundColor]="'blue'">Botão 1</button>
-<br>
+<button [class.red-button]="isRedButton" (click)="isGreen = false">Vermelho</button>
+<button [class.green-button]="true" (click)="isGreen = true">Verde</button>
 
-<button [style.width.px]="widthButton2" [style.backgroundColor]="'pink'">Botão 2</button>
-<br>
-
-<button [style]="'width: 140px; backgroundColor: brown;'">Botão 3</button>
-<br>
-
-<button [style]="{ width: '150px', backgroundColor: 'orange' }">Botão 4</button>
-<br>
-
-<button [style]="stylesObj">Botão 5</button>
-
-<br />
-
-<button (click)="updateStyleObj()">Atualizar obj</button>
-
-<button (click)="updateStyleObjCorrect()">Atualizar obj correto</button>
-
-<button (click)="updateWidth()">Atualizar width</button>
+<button [class]="{
+  'red-button': !isGreen,
+  'green-button': isGreen,
+}">Objeto</button>
