--- a/03 - BINDING, DIRETIVAS, TEMPLATES E DECORATORS/decoratorsapp/projeto-components/src/app/card/card.component.html
+++ b/03 - BINDING, DIRETIVAS, TEMPLATES E DECORATORS/decoratorsapp/projeto-components/src/app/card/card.component.html
@@ -1,5 +1,5 @@
 <div class="card">
     <div class="card__plan card__item">Plano <b>{{plantype}}</b></div>
     <div class="card__price card__item">R${{planPrice}}/Mês</div>
-    <app-card-button></app-card-button>
+    <app-card-button (buttonClickEmitter)="buttonCliked($event)"></app-card-button>
 </div>
