@Input com Get e Set

--- a/03 - BINDING, DIRETIVAS, TEMPLATES E DECORATORS/decoratorsapp/projeto-components/src/app/app.component.html
+++ b/03 - BINDING, DIRETIVAS, TEMPLATES E DECORATORS/decoratorsapp/projeto-components/src/app/app.component.html
@@ -1,5 +1,17 @@
 <div class="cards-container">
-  <app-card [plantypeAlias]="cardPlantype" [planPrice]="cardPlanPrice"></app-card>
+  <app-card 
+  [plantypeAlias]="cardPlantype" 
+  [planPrice]="cardPlanPrice">
+</app-card>
 
   <app-card-roxo></app-card-roxo>
 </div>
+
+<br>
+
+<input 
+#meuIndput
+type="text"
+(keyup)="handlePlanType(meuIndput.value)"
+placeholder="Digite o plano"
+/>
