--- a/03 - BINDING, DIRETIVAS, TEMPLATES E DECORATORS/card-app/src/app/app.component.html
+++ b/03 - BINDING, DIRETIVAS, TEMPLATES E DECORATORS/card-app/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-button 
+<!-- <app-button 
 [text]="'Adquirir'" 
 [style]="'purple'"
 [disabled]="true"
@@ -9,4 +9,18 @@
 [text]="'Adquirir'" 
 [style]="'white'"
 (cliked)="buttonCliked()"
-/>
+/> -->
+
+<div class="card-container">
+    <app-card 
+    [planType]="'Simples'" 
+    [planPrice]="100" 
+    [cardStyle]="'orange'" 
+    (buttonClicked)="onCardButtonClicked()" />
+
+    <app-card [planType]="'Completo'" 
+    [planPrice]="200" 
+    [cardStyle]="'purple'" 
+    (buttonClicked)="onCardButtonClicked()"
+    />
+</div>
