Criação da Estrutura de Container Base

--- a/04 - PROJETO - filtro de listas de usuarios/users-filter-project/src/app/app.component.html
+++ b/04 - PROJETO - filtro de listas de usuarios/users-filter-project/src/app/app.component.html
@@ -1,6 +1,17 @@
-<button mat-flat-button>Basic</button>
+<div class="container">
+  <div class="left-container">
 
-<button mat-fab extended>
-  <mat-icon>favorite</mat-icon>
-  Basic
-</button>
+    <div class="top-div">
+
+    </div>
+
+    <div class="main-left-div">
+
+    </div>
+
+  </div>
+
+  <div class="right-div">
+    
+  </div>
+</div>
