--- a/04 - PROJETO - filtro de listas de usuarios/users-filter-project/src/styles.scss
+++ b/04 - PROJETO - filtro de listas de usuarios/users-filter-project/src/styles.scss
@@ -1,7 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import '../src/styles/utils/text-align-center';
+
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
 
 *{
     padding: 0;
