Criação do Layout do Componente de Filtro

--- a/04 - PROJETO - filtro de listas de usuarios/users-filter-project/src/app/app.component.html
+++ b/04 - PROJETO - filtro de listas de usuarios/users-filter-project/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="left-container">
 
     <div class="top-div">
-
+      <app-filter />
     </div>
 
     <div class="main-left-div">
@@ -12,6 +12,6 @@
   </div>
 
   <div class="right-div">
-    <app-user-details/>
+    <app-user-details />
   </div>
 </div>
