Criação do Pipe de Telefone

--- a/04 - PROJETO - filtro de listas de usuarios/users-filter-project/src/app/components/user-details/user-details.component.html
+++ b/04 - PROJETO - filtro de listas de usuarios/users-filter-project/src/app/components/user-details/user-details.component.html
@@ -15,7 +15,7 @@
         <mat-divider></mat-divider>
         <mat-list-item>
             <span class="mat-headline-medium">Telefone: </span> <span
-                class="mat-headline-small">{{user.telefone}}</span>
+                class="mat-headline-small">{{user.telefone | phone}}</span>
         </mat-list-item>
         <mat-divider></mat-divider>
         <mat-list-item>
