Criação do Pipe de Status

--- a/04 - PROJETO - filtro de listas de usuarios/users-filter-project/src/app/components/user-details/user-details.component.html
+++ b/04 - PROJETO - filtro de listas de usuarios/users-filter-project/src/app/components/user-details/user-details.component.html
@@ -24,7 +24,7 @@
         </mat-list-item>
         <mat-divider></mat-divider>
         <mat-list-item>
-            <span class="mat-headline-medium">Status: </span> <span class="mat-headline-small">{{user.ativo}}</span>
+            <span class="mat-headline-medium">Status: </span> <span class="mat-headline-small">{{user.ativo | status}}</span>
         </mat-list-item>
         <mat-divider></mat-divider>
         <mat-list-item>
