Utilizando o Pipe de Data ("date")

--- a/04 - PROJETO - filtro de listas de usuarios/users-filter-project/src/app/components/user-details/user-details.component.html
+++ b/04 - PROJETO - filtro de listas de usuarios/users-filter-project/src/app/components/user-details/user-details.component.html
@@ -33,7 +33,7 @@
         <mat-divider></mat-divider>
         <mat-list-item>
             <span class="mat-headline-medium">Data de Cadastro: </span> <span
-                class="mat-headline-small">{{user.dataCadastro}}</span>
+                class="mat-headline-small">{{user.dataCadastro | date:'dd/MM/yyyy'}}</span>
         </mat-list-item>
         <mat-divider></mat-divider>
     </mat-list>
