--- a/04 - PROJETO - filtro de listas de usuarios/users-filter-project/src/app/components/users-list/users-list.component.html
+++ b/04 - PROJETO - filtro de listas de usuarios/users-filter-project/src/app/components/users-list/users-list.component.html
@@ -4,13 +4,13 @@
         <!--Column name -->
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef> Nome </th>
-            <td mat-cell *matCellDef="let element" class="users-list__item" (click)="onUserSelected(element)"> {{element.nome}} </td>
+            <td mat-cell *matCellDef="let element" class="users-list__item" (click)="onUserSelected(element)"> {{element.nome | dashIfEmpty}} </td>
         </ng-container>
 
         <!-- Column data de cadastro -->
         <ng-container matColumnDef="date">
             <th mat-header-cell *matHeaderCellDef> Data de cadastro </th>
-            <td mat-cell *matCellDef="let element" class="users-list__item" (click)="onUserSelected(element)"> {{element.dataCadastro | date:'dd/MM/yyyy'}} </td>
+            <td mat-cell *matCellDef="let element" class="users-list__item" (click)="onUserSelected(element)"> {{element.dataCadastro | date:'dd/MM/yyyy' | dashIfEmpty}} </td>
         </ng-container>
 
         <!-- Column status -->
