Criação do Evento de Click no Usuário

--- a/04 - PROJETO - filtro de listas de usuarios/users-filter-project/src/app/app.component.html
+++ b/04 - PROJETO - filtro de listas de usuarios/users-filter-project/src/app/app.component.html
@@ -6,12 +6,12 @@
     </div>
 
     <div class="main-left-div">
-      <app-users-list />
+      <app-users-list (userSelected)="onUserSelected($event)" />
     </div>
 
   </div>
 
   <div class="right-div">
-    <app-user-details [user]="userSelected" />
+    <app-user-details [user]="userSelected" *ngIf="showUserDetails"/>
   </div>
 </div>
