--- a/04 - PROJETO - filtro de listas de usuarios/users-filter-project/src/app/components/filter/filter.component.html
+++ b/04 - PROJETO - filtro de listas de usuarios/users-filter-project/src/app/components/filter/filter.component.html
@@ -1,9 +1,9 @@
 <div class="filter">
-    <form class="form">
+    <div class="form">
         <div class="form__name">
             <mat-form-field class="example-full-width">
                 <mat-label>Nome</mat-label>
-                <input matInput placeholder="Ex. Fulano da silva" value="Fulano">
+                <input matInput placeholder="Ex. Fulano da silva" [(ngModel)]="filterOptions.name">
             </mat-form-field>
         </div>
 
@@ -11,8 +11,8 @@
             <mat-form-field>
                 <mat-label>Enter a date range</mat-label>
                 <mat-date-range-input [rangePicker]="picker">
-                    <input matStartDate placeholder="Start date">
-                    <input matEndDate placeholder="End date">
+                    <input matStartDate placeholder="Start date" [(ngModel)]="filterOptions.startDate">
+                    <input matEndDate placeholder="End date" [(ngModel)]="filterOptions.endDate">
                 </mat-date-range-input>
                 <!-- <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint> -->
                 <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
@@ -23,16 +23,20 @@
         <div class="form__status">
             <mat-form-field>
                 <mat-label>Status</mat-label>
-                <mat-select>
-                    @for (food of foods; track food) {
+                <mat-select [(ngModel)]="filterOptions.status">
+                    <!--   @for (food of foods; track food) {
                     <mat-option [value]="food.value">{{food.viewValue}}</mat-option>
-                    }
+                    } -->
+
+                    <mat-option *ngFor="let status of statusList" [value]="status.value">
+                        {{status.description}}
+                    </mat-option>
                 </mat-select>
             </mat-form-field>
         </div>
 
         <div class="form__button">
-            <button mat-flat-button>Filtrar</button>
+            <button mat-flat-button (click)="onFilter()">Filtrar</button>
         </div>
-    </form>
+    </div>
 </div>
