--- a/04 - PROJETO - filtro de listas de usuarios/users-filter-project/src/app/app.component.html
+++ b/04 - PROJETO - filtro de listas de usuarios/users-filter-project/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="left-container">
 
     <div class="top-div">
-      <app-filter />
+      <app-filter (onFilter)="onFilter($event)" />
     </div>
 
     <div class="main-left-div">
