--- a/04 - PROJETO - filtro de listas de usuarios/users-filter-project/src/app/app.component.html
+++ b/04 - PROJETO - filtro de listas de usuarios/users-filter-project/src/app/app.component.html
@@ -6,7 +6,7 @@
     </div>
 
     <div class="main-left-div">
-      <app-users-list [usersList]="usersList" (userSelected)="onUserSelected($event)" />
+      <app-users-list [usersList]="usersListFiltered" (userSelected)="onUserSelected($event)" />
     </div>
 
   </div>
