Acessar Elemento HTML no Componente com "@ViewChild”

--- a/05 - DIRETIVAS, TEMPLATEWS E DECORATORS DINÂMICOS/PROJETO/src/app/app.component.html
+++ b/05 - DIRETIVAS, TEMPLATEWS E DECORATORS DINÂMICOS/PROJETO/src/app/app.component.html
@@ -1,10 +1,10 @@
-<!-- Change detection com ngModel -->
-<!-- <input type="text" #meuInput ngModel> -->
 
-<!-- Change detection com constructor de serviço -->
-<input type="text" #meuInput ngModel>
+Meu input: <input type="text" #meuInput>
 
-Valor: {{meuInput.value}} <br>
+<button (click)="updateInputText()">atualizar</button>
+<button (click)="focus()">Foco</button>
 
-<button (click)="clicou(meuInput)">Atualizar</button>
-
+<div #minhaDiv>
+  Conteudo inicial
+</div>
+<button (click)="updateDivContent()">Mudar conteudo div</button>
