--- a/05 - DIRETIVAS, TEMPLATEWS E DECORATORS DINÂMICOS/PROJETO/src/app/app.component.html
+++ b/05 - DIRETIVAS, TEMPLATEWS E DECORATORS DINÂMICOS/PROJETO/src/app/app.component.html
@@ -1,10 +1,3 @@
+<app-filho #filhoComp/>
 
-Meu input: <input type="text" #meuInput>
-
-<button (click)="updateInputText()">atualizar</button>
-<button (click)="focus()">Foco</button>
-
-<div #minhaDiv>
-  Conteudo inicial
-</div>
-<button (click)="updateDivContent()">Mudar conteudo div</button>
+<button (click)="hello()">asser metodo do elemento filho atráves do pai</button>
