--- a/05 - DIRETIVAS, TEMPLATEWS E DECORATORS DINÂMICOS/PROJETO/src/app/app.component.html
+++ b/05 - DIRETIVAS, TEMPLATEWS E DECORATORS DINÂMICOS/PROJETO/src/app/app.component.html
@@ -1,3 +1,1 @@
-<app-filho #filhoComp/>
-
-<button (click)="hello()">asser metodo do elemento filho atráves do pai</button>
+Meu input: <input type="text" #meuInput>
