--- a/05 - DIRETIVAS, TEMPLATEWS E DECORATORS DINÂMICOS/projeto-directives/src/styles.scss
+++ b/05 - DIRETIVAS, TEMPLATEWS E DECORATORS DINÂMICOS/projeto-directives/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    background-color: gray;
+}
+
+.meu-texto{
+    background-color: lightcoral;
+    color: white;
+}
+
+.meu-size{
+    font-size: 40px;
+}
