Explorando os parâmetros do @HostListener

--- a/05 - DIRETIVAS, TEMPLATEWS E DECORATORS DINÂMICOS/projeto-directives/src/app/app.component.html
+++ b/05 - DIRETIVAS, TEMPLATEWS E DECORATORS DINÂMICOS/projeto-directives/src/app/app.component.html
@@ -43,7 +43,7 @@
 
 <p appStyle>Diretiva</p> -->
 
-<p class="meu-texto">Normal</p>
+<!-- <p class="meu-texto">Normal</p>
 
 <p [attr.class]="'meu-texto'">Attr</p>
 
@@ -54,4 +54,10 @@
   'meu-size': true,
 }">Property biding: Class</p>
 
-<p appClass>Diretiva</p>
+<p appClass>Diretiva</p> -->
+
+<!-- sem diretiva -->
+<!-- <input (click)="onClick($event)" />
+ 
+ --><!-- com diretiva -->
+<input appListener />
