Como Passar Parâmetros para uma Diretiva de Atributo

--- a/05 - DIRETIVAS, TEMPLATEWS E DECORATORS DINÂMICOS/projeto-directives/src/app/app.component.html
+++ b/05 - DIRETIVAS, TEMPLATEWS E DECORATORS DINÂMICOS/projeto-directives/src/app/app.component.html
@@ -58,6 +58,23 @@
 
 <!-- sem diretiva -->
 <!-- <input (click)="onClick($event)" />
- 
+
  --><!-- com diretiva -->
-<input appListener />
+<!-- <input appListener /> -->
+
+<input 
+appInputBackground="red"
+tColor="white"
+/>
+
+<input 
+appInputBackground
+bgColor="blue"
+tColor="white"
+/>
+
+<input 
+appInputBackground
+[bgColor]="appBgColor"
+tColor="white"
+/>
