--- a/05 - DIRETIVAS, TEMPLATEWS E DECORATORS DINÂMICOS/projeto-element-ref/src/app/app.component.html
+++ b/05 - DIRETIVAS, TEMPLATEWS E DECORATORS DINÂMICOS/projeto-element-ref/src/app/app.component.html
@@ -1,4 +1,7 @@
-<div #minhaDiv></div>
-<div id="minha-outra-div"></div>
+<div appFocusSecondInput></div>
 
-<button (click)="createElement()">Criar Elemento</button>
+<div appFocusSecondInput>
+    <input placeholder="Input 1"/>
+    <input placeholder="Input 2"/>
+    <input placeholder="Input 3"/>
+</div>
