--- a/06 - PROJEÇÃO DE CONTEUDO E ESTILIZAÇÃO COM DIRETIVAS/projecao/src/app/app.component.html
+++ b/06 - PROJEÇÃO DE CONTEUDO E ESTILIZAÇÃO COM DIRETIVAS/projecao/src/app/app.component.html
@@ -1,12 +1,22 @@
-<app-card>
-   <p>Sou um conteudo</p>
-   <button>Botão</button>
-</app-card>
+<!-- <app-card>
+   <p class="texto">Sou um conteudo</p>
+   <p class="texto">Sou um conteudo</p>
+   <button attrTeste>Botão</button>
+</app-card> -->
 
 <br>
+<!-- <app-card>
+  <div card-header>
+    Sou um header
+  </div>
+  <div card-content>
+    Sou um content
+  </div>
+  <div card-footer>
+    Sou um footer
+  </div>
+</app-card> -->
 
 <app-card>
-   <p>Sou um conteudo</p>
-   <button>Botão</button>
-   <h3>Sou um titulo</h3>
+  <app-comp-texto/>
 </app-card>
