--- a/06 - PROJEÇÃO DE CONTEUDO E ESTILIZAÇÃO COM DIRETIVAS/projecao/src/app/card/card.component.html
+++ b/06 - PROJEÇÃO DE CONTEUDO E ESTILIZAÇÃO COM DIRETIVAS/projecao/src/app/card/card.component.html
@@ -1,3 +1,23 @@
+<!-- <div class="card">
+    <ng-content select=".texto"></ng-content>
+</div>
+
+<br>
+
+<div class="card">
+    <ng-content select="[attrTeste]"></ng-content>
+</div> -->
+
+<br>
+
+<!-- <div class="card">
+    <ng-content select="[card-header]"></ng-content>
+    <ng-content select="[card-content]"></ng-content>
+    <ng-content select="[card-footer]"></ng-content>
+</div> -->
+
+<br>
+
 <div class="card">
     <ng-content></ng-content>
 </div>
