Estilização do Conteúdo Projetado

--- a/06 - PROJEÇÃO DE CONTEUDO E ESTILIZAÇÃO COM DIRETIVAS/projecao/src/app/app.component.html
+++ b/06 - PROJEÇÃO DE CONTEUDO E ESTILIZAÇÃO COM DIRETIVAS/projecao/src/app/app.component.html
@@ -1,22 +1,3 @@
-<!-- <app-card>
-   <p class="texto">Sou um conteudo</p>
-   <p class="texto">Sou um conteudo</p>
-   <button attrTeste>Botão</button>
-</app-card> -->
-
-<br>
-<!-- <app-card>
-  <div card-header>
-    Sou um header
-  </div>
-  <div card-content>
-    Sou um content
-  </div>
-  <div card-footer>
-    Sou um footer
-  </div>
-</app-card> -->
-
 <app-card>
-  <app-comp-texto/>
+  <p class="texto">Sou um paragrafo</p>
 </app-card>
