--- a/06 - PROJEÇÃO DE CONTEUDO E ESTILIZAÇÃO COM DIRETIVAS/projecao/src/app/card/card.component.html
+++ b/06 - PROJEÇÃO DE CONTEUDO E ESTILIZAÇÃO COM DIRETIVAS/projecao/src/app/card/card.component.html
@@ -1,3 +1,10 @@
 <div class="card">
-    <ng-content></ng-content>
+    <div class="card__header">
+        <!-- O Conteúdo que tiver a atributo card-header será 
+         projetado dentro do ng-content  -->
+        <ng-content select="[card-header]"></ng-content>
+    </div>
+    <div class="card__content">
+        <ng-content select="[card-content]"></ng-content>
+    </div>
 </div>
