--- a/06 - PROJEÇÃO DE CONTEUDO E ESTILIZAÇÃO COM DIRETIVAS/projecao/src/app/card/card.component.scss
+++ b/06 - PROJEÇÃO DE CONTEUDO E ESTILIZAÇÃO COM DIRETIVAS/projecao/src/app/card/card.component.scss
@@ -1,5 +1,13 @@
 .card{
-    border-radius: 5px;
-    padding: 10px;
-    background-color: white;
+    max-width: 400%;
+    &__header{
+        padding: 50px;
+        height: 40%;
+        background-color: #FFAD36;
+    }
+    &__content {
+        padding: 50px;
+        height: 60%;
+        background-color: #FF5916;
+    }
 }
