--- a/06 - PROJEÇÃO DE CONTEUDO E ESTILIZAÇÃO COM DIRETIVAS/directiveLab/src/app/app.component.html
+++ b/06 - PROJEÇÃO DE CONTEUDO E ESTILIZAÇÃO COM DIRETIVAS/directiveLab/src/app/app.component.html
@@ -8,3 +8,5 @@
   <h1 class="ca-u-card-text-description">Sou a descrição do card</h1>
   <app-card-text-description color="green">Sou a descrição do card</app-card-text-description>
 </div>
+
+<img src="./assets/images/gato.jpg"  style="width: 100px;">
