Diretiva com Múltiplos Seletores

--- a/06 - PROJEÇÃO DE CONTEUDO E ESTILIZAÇÃO COM DIRETIVAS/directiveLab/src/app/app.component.html
+++ b/06 - PROJEÇÃO DE CONTEUDO E ESTILIZAÇÃO COM DIRETIVAS/directiveLab/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <h1 class="ca-u-card-text-title">Sou o titulo do card</h1>
+  <h1 appCardTextTitle>Sou o titulo do card</h1>
   <app-card-text-title>Sou o titulo do card</app-card-text-title>
   
   <h1 class="ca-u-card-text-subtitle">Sou o subtitulo do card</h1>
@@ -9,4 +9,4 @@
   <app-card-text-description color="green">Sou a descrição do card</app-card-text-description>
 </div>
 
-<img src="./assets/images/gato.jpg"  style="width: 100px;">
+<img src="../app/assets/images/gato.jpg"  style="width: 100px;">
