--- a/07 - TOPICOS AVANÇADOS PROJEÇÃO DE CONTEUDO/exaple/src/app/app.component.html
+++ b/07 - TOPICOS AVANÇADOS PROJEÇÃO DE CONTEUDO/exaple/src/app/app.component.html
@@ -1,20 +1,28 @@
-<!-- DIV: O elemento <div> cria um bloco no DOM -->
-<div>
-    DIV:
-    <!-- <app-meu-comp> é um componente Angular que será renderizado aqui -->
-    <app-meu-comp></app-meu-comp>
-</div>
-
-<!-- NG-CONTAINER: Não adiciona elementos extras ao DOM -->
-<ng-container>
-    Container 
-    <!-- <app-meu-comp> é um componente Angular que será renderizado aqui -->
-    <app-meu-comp></app-meu-comp>
-</ng-container>
-
-<!-- NG-TEMPLATE: Não é renderizado no DOM por padrão -->
-<ng-template>
-    Template:
-    <!-- <app-meu-comp> é um componente Angular que pode ser instanciado de forma condicional -->
-    <app-meu-comp></app-meu-comp>
+<!-- Definição de um template para o cabeçalho (header) -->
+<ng-template #headerTemplate>
+    <!-- Conteúdo do header que será usado no componente app-card -->
+    <p>Sou um Header</p>
 </ng-template>
+
+<!-- Definição de um template para o conteúdo principal (content) -->
+<ng-template #contentTemplate>
+    <!-- Conteúdo principal que será usado no componente app-card -->
+    <p>Sou um Content</p>
+</ng-template>
+
+<!-- Definição de um template para o rodapé (footer) -->
+<ng-template #footerTemplate>
+    <!-- Conteúdo do footer que será usado no componente app-card -->
+    <p>Sou um Footer</p>
+</ng-template>
+
+<!-- Uso do componente app-card, passando os templates definidos como parâmetros -->
+
+<!-- Passando o template de header como entrada -->
+<!-- Passando o template de conteúdo como entrada -->
+<!-- Passando o template de footer como entrada -->
+<app-card 
+[header]="headerTemplate" 
+[content]="contentTemplate" 
+[footer]="footerTemplate"
+></app-card>
