Pipes Personalizados Parte 1: Conversão de Status

--- a/08 - PIPES/pipes-examples/src/app/app.component.html
+++ b/08 - PIPES/pipes-examples/src/app/app.component.html
@@ -1,13 +1,2 @@
-
-{{pessoa.nome | uppercase}}
-
-<br>
-
-<!-- Os pipes não alteram a instancia do obj pessoa -->
-{{pessoa.nome}}
-
-<br>
-
-<!-- Concatenação de pipes -->
-{{pessoa | json | uppercase}}
+Status do Usuário: {{user.status | userStatus}}
 
