--- a/08 - PIPES/pipes-examples/src/app/app.component.html
+++ b/08 - PIPES/pipes-examples/src/app/app.component.html
@@ -3,3 +3,17 @@ Status do Usuário: {{user.status | userStatus}}
 <br>
 
 Nome do Usuário: <b>{{user.nome | truncate: 2}}</b>
+
+<br>
+
+<h5>Pipes de texto</h5>
+
+Uppercase: {{'upper caser' | uppercase}};
+<br>
+Lowercase: {{'LOWER CASE' | lowercase}};
+<br>
+Titlecase: {{'filipe de lima' | titlecase}};
+<br>
+Json: {{user | json}};
+<br>
+Slice: {{'Olá mundo' | slice: 0 : 5}};
