Date Pipe Parte 2: Formatações Predefinidas e Customizadas

--- a/08 - PIPES/pipes-examples/src/app/app.component.html
+++ b/08 - PIPES/pipes-examples/src/app/app.component.html
@@ -31,4 +31,14 @@ Timestamp para região: {{1464789600000 | date : 'full'}}
 Timestamp UTC-0: {{1464789600000 | date : 'full': '+0000'}}
 
 <h1>Formato </h1>
-<b>Data convertida para região: {{minhaDataObj | date : 'full'}} </b>
+<b>Data convertidapara região: {{minhaDataObj | date : 'full'}} </b>
+
+<h1>Formatações:</h1>
+Curto: {{'2016-06-01T14:00:00.000Z' | date : 'short'}}
+<br>
+Médio: {{'2016-06-01T14:00:00.000Z' | date : 'medium'}}
+<br>
+Long: {{'2016-06-01T14:00:00.000Z' | date : 'long'}}
+<br>
+Competo: {{'2016-06-01T14:00:00.000Z' | date : 'full'}}
+<br>
