Async Pipe com Observable Parte 1: Chamada HTTP com Response de Objeto

--- a/08 - PIPES/pipes-examples/src/app/app.component.html
+++ b/08 - PIPES/pipes-examples/src/app/app.component.html
@@ -42,3 +42,5 @@ Long: {{'2016-06-01T14:00:00.000Z' | date : 'long'}}
 <br>
 Competo: {{'2016-06-01T14:00:00.000Z' | date : 'full'}}
 <br>
+
+<app-obs-com-objeto></app-obs-com-objeto>
