--- a/08 - PIPES/pipes-examples/src/app/app.component.html
+++ b/08 - PIPES/pipes-examples/src/app/app.component.html
@@ -43,4 +43,6 @@ Long: {{'2016-06-01T14:00:00.000Z' | date : 'long'}}
 Competo: {{'2016-06-01T14:00:00.000Z' | date : 'full'}}
 <br>
 
-<app-obs-com-objeto></app-obs-com-objeto>
+<!-- <app-obs-com-objeto></app-obs-com-objeto> -->
+
+<app-obs-com-array></app-obs-com-array>
