--- a/08 - PIPES/desafio/src/app/app.component.html
+++ b/08 - PIPES/desafio/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="operations">
   <div class="operations__filter">
-      <input class="operations__filter-input" type="text" placeholder="Filtrar por Nome">
-  </div>
+    <input class="operations__filter-input" type="text" placeholder="Filtrar por Nome" [(ngModel)]="searchTerm">
+</div>
   <div class="operations__table">
       <table>
           <thead>
@@ -15,7 +15,7 @@
               </tr>
           </thead>
           <tbody>
-              <tr *ngFor="let operation of operationsList">
+              <tr *ngFor="let operation of operationsList | filter: 'customerName': searchTerm">
                   <td class="operations__table-cell">{{operation.customerName}}</td>
                   <td class="operations__table-cell">
                       <p class="operations__status">
