--- a/10 - TEMPLATE DRIVEN FORMS/driven-forms/src/app/app.component.html
+++ b/10 - TEMPLATE DRIVEN FORMS/driven-forms/src/app/app.component.html
@@ -8,3 +8,6 @@
 <p>Válido: {{meuInputFormControl.valid}}</p>
 <p>Tocado: {{meuInputFormControl.touched}}</p>
 <p>Sujo: {{meuInputFormControl.dirty}}</p>
+
+<br>
+<button (click)="send()">Enviar</button>
