Aplicar ou Remover Estilos CSS Baseados no Estado do Elemento

--- a/10 - TEMPLATE DRIVEN FORMS/driven-forms/src/app/app.component.html
+++ b/10 - TEMPLATE DRIVEN FORMS/driven-forms/src/app/app.component.html
@@ -1,3 +1,14 @@
+<!-- Nome: <input 
+  ngModel
+  #meuInputFormControl="ngModel"
+  minlength="5"
+  required
+
+  [ngClass]="{
+    'valid': meuInputFormControl.valid && meuInputFormControl.touched,
+    'invalid': meuInputFormControl.invalid && meuInputFormControl.touched
+  }"
+> -->
 Nome: <input 
   ngModel
   #meuInputFormControl="ngModel"
