Diretiva NgModel com Elemento Select Textarea

--- a/10 - TEMPLATE DRIVEN FORMS/driven-forms/src/app/app.component.html
+++ b/10 - TEMPLATE DRIVEN FORMS/driven-forms/src/app/app.component.html
@@ -1,33 +1,8 @@
-<!-- Nome: <input 
-  ngModel
-  #meuInputFormControl="ngModel"
-  minlength="5"
-  required
+<h1>Input text</h1>
+<app-input-text></app-input-text>
 
-  [ngClass]="{
-    'valid': meuInputFormControl.valid && meuInputFormControl.touched,
-    'invalid': meuInputFormControl.invalid && meuInputFormControl.touched
-  }"
-> -->
-Nome: <input 
-  ngModel
-  #meuInputFormControl="ngModel"
-  minlength="5"
-  required
->
+<h1>Elemeto Textarea</h1>
+<app-textarea></app-textarea>
 
-<div *ngIf="meuInputFormControl.invalid && meuInputFormControl.touched">
-  <div *ngIf="meuInputFormControl.hasError('required')">
-    o campo nome é obrigatório
-  </div>
-  <div *ngIf="meuInputFormControl.hasError('minlength')">
-    o campo nome deve ter pelo menos 5 caracteres
-  </div>
-</div>
-
-<p>Válido: {{meuInputFormControl.valid}}</p>
-<p>Tocado: {{meuInputFormControl.touched}}</p>
-<p>Sujo: {{meuInputFormControl.dirty}}</p>
-
-<br>
-<button (click)="send()">Enviar</button>
+<h1>Elemeto Select</h1>
+<app-select></app-select>
