Funcionamento Básico do Elemento Form e da Diretiva NgForm

--- a/10 - TEMPLATE DRIVEN FORMS/driven-forms/src/app/app.component.html
+++ b/10 - TEMPLATE DRIVEN FORMS/driven-forms/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>Input text</h1>
+<!-- <h1>Input text</h1>
 <app-input-text></app-input-text>
 
 <h1>Elemeto Textarea</h1>
@@ -11,4 +11,7 @@
 <app-radio-button></app-radio-button>
 
 <h1>Elemento Checkbox</h1>
-<app-checkbox></app-checkbox>
+<app-checkbox></app-checkbox> -->
+
+
+<app-form></app-form>
