--- a/10 - TEMPLATE DRIVEN FORMS/driven-forms/src/app/elements/form/form/form.component.html
+++ b/10 - TEMPLATE DRIVEN FORMS/driven-forms/src/app/elements/form/form/form.component.html
@@ -1,11 +1,26 @@
-<form ngForm #meuForm="ngForm">
+<form #meuForm="ngForm" (ngSubmit)="onSubmit(meuForm)">
 
-    <!-- para as validações do ngForm funcionar corretamente o input control
-     deve ter a propriedade name e a diretiva ngModel -->
-    <input ngModel name="nome" required>
+    <input type="text" name="nome" [(ngModel)]="inputText">
+    <br>
 
-    <p>Válido: {{ meuForm.valid}}</p> 
-    <p>Tocado: {{ meuForm.touched}}</p> 
-    <p>Sujo: {{ meuForm.dirty}}</p> 
+    <textarea name="descricao" [(ngModel)]="textarea"></textarea>
+    <br>
+
+    <select name="pais" [(ngModel)]="select">
+        <option value="1">Brasil</option>
+        <option value="2">Espanha</option>
+    </select>
+
+    <input type="radio" name="groupStatus" id="ativo" [(ngModel)]="radioButton">
+    <label for="ativo">Ativo</label>
+    <input type="radio" name="groupStatus" id="inativo" [(ngModel)]="radioButton">
+    <label for="ativo">inativo</label>
+
+    <input type="checkbox" name="condicao" id="condicao" [(ngModel)]="checkbox">
+    <label for="condicao"></label>
+
+
+    <button type="submit">enviar</button>
+    <button type="reset" (click)="onReset(meuForm)">Limpar</button>
 
 </form>
