--- a/10 - TEMPLATE DRIVEN FORMS/driven-forms/src/app/app.component.html
+++ b/10 - TEMPLATE DRIVEN FORMS/driven-forms/src/app/app.component.html
@@ -14,4 +14,6 @@
 <app-checkbox></app-checkbox> -->
 
 
-<app-form></app-form>
+<!-- <app-form></app-form> -->
+
+<app-ng-model-group></app-ng-model-group>
