Criar Formulário com Componentes Filhos

--- a/10 - TEMPLATE DRIVEN FORMS/driven-forms/src/app/app.component.html
+++ b/10 - TEMPLATE DRIVEN FORMS/driven-forms/src/app/app.component.html
@@ -16,4 +16,6 @@
 
 <!-- <app-form></app-form> -->
 
-<app-ng-model-group></app-ng-model-group>
+<!-- <app-ng-model-group></app-ng-model-group> -->
+
+<app-main-form></app-main-form>
