--- a/10 - TEMPLATE DRIVEN FORMS/driven-forms/src/app/app.component.html
+++ b/10 - TEMPLATE DRIVEN FORMS/driven-forms/src/app/app.component.html
@@ -22,4 +22,6 @@
 
 <!-- <app-custom-validator-form-ex1></app-custom-validator-form-ex1> -->
 
-<app-custom-validator-form-ex2></app-custom-validator-form-ex2>
+<!-- <app-custom-validator-form-ex2></app-custom-validator-form-ex2> -->
+
+<app-async-custom-validator-form></app-async-custom-validator-form>
