--- a/11 - REACTIVE FORMS/reative-forms/src/app/EXEMPLOS/form-control/form-control.component.html
+++ b/11 - REACTIVE FORMS/reative-forms/src/app/EXEMPLOS/form-control/form-control.component.html
@@ -1,1 +1,7 @@
-<p>form-control works!</p>
+<label for="name">Nome</label>
+<input type="text" id="name" [formControl]="nome" />
+
+
+<p>Valor: {{nome.value}}</p>
+
+<button (click)="mostrarStatus()">Mostrar Status</button>
