--- a/11 - REACTIVE FORMS/reative-forms/src/app/EXEMPLOS/form-control/form-control.component.html
+++ b/11 - REACTIVE FORMS/reative-forms/src/app/EXEMPLOS/form-control/form-control.component.html
@@ -1,7 +1,10 @@
 <label for="name">Nome</label>
-<input type="text" id="name" [formControl]="nome" />
+<input type="text" id="name" [formControl]="nome" (input)="inputAlterado()" />
 
 
 <p>Valor: {{nome.value}}</p>
 
 <button (click)="mostrarStatus()">Mostrar Status</button>
+
+<button (click)="alterarValor()">Alterar Valor</button>
+
