Como Habilitar e Desabilitar um FormControl

--- a/11 - REACTIVE FORMS/reative-forms/src/app/EXEMPLOS/form-control/form-control.component.html
+++ b/11 - REACTIVE FORMS/reative-forms/src/app/EXEMPLOS/form-control/form-control.component.html
@@ -5,6 +5,11 @@
 <p>Valor: {{nome.value}}</p>
 
 <button (click)="mostrarStatus()">Mostrar Status</button>
+<br>
 
 <button (click)="alterarValor()">Alterar Valor</button>
+<br>
+
+<button (click)="desabilitar()">Desabilitar</button>
+<button (click)="habilitar()">Desabilitar</button>
 
