--- a/11 - REACTIVE FORMS/reative-forms/src/app/EXEMPLOS/form-control/form-control.component.html
+++ b/11 - REACTIVE FORMS/reative-forms/src/app/EXEMPLOS/form-control/form-control.component.html
@@ -10,6 +10,10 @@
 <button (click)="alterarValor()">Alterar Valor</button>
 <br>
 
-<button (click)="desabilitar()">Desabilitar</button>
+<button (click)="desabilitar()">Habilitar</button>
 <button (click)="habilitar()">Desabilitar</button>
+<br>
+
+
+<button (click)="reset()">Resetar</button>
 
