--- a/11 - REACTIVE FORMS/reative-forms/src/app/app.component.html
+++ b/11 - REACTIVE FORMS/reative-forms/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-form-control></app-form-control>
+<!-- <app-form-control></app-form-control> -->
+<app-validador-assincrono></app-validador-assincrono>
